fixed padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -46,5 +46,6 @@ body {
 @media only screen and (max-width: 500px) {
   body {
     margin-top: 100px;
+    padding: 0 30px;
   }
 }
